<resources>
    <string name="app_name">Бус Пљус!</string>
    <string name="auto_unos">Аутоматски упит</string>
    <string name="auto_unos_opis">Када у претрази остане једна станица, аутоматски се шаље упит.</string>
    <string name="azurirati_bazu">Ажурирати базу стајалишта и реда вожње?</string>
    <string name="azurirati_mapu">Ажурирати мапу Београда?</string>
    <string name="baza_nadogradjena">База стајалишта ажурирана</string>
    <string name="broj_stanice">Број станице…</string>
    <string name="da">Да</string>
    <string name="debug">PLJUS!</string>
    <string name="dolazaknastajaliste">Долазак на стајалиште</string>
    <string name="dostupna_nadogradnja">Доступна је надоградња</string>
    <string name="potrebna_nadogradnja">Потребно је надоградити базу стајалишта</string>
    <string name="eksprezim">Експериментални режим</string>
    <string name="gar_broj">ГБ возила:</string>
    <string name="greska_baza">Грешка при отварању базе станица</string>
    <string name="greska_sa_vezom">Грешка са повезивањем</string>
    <string name="greska_u_programu">Грешка у програму!</string>
    <string name="greska_zip">Грешка при распакивању ЗИП фајла</string>
    <string name="ka_stanici">Ка станици:</string>
    <string name="mapa_nadogradjena">Мапа ажурирана</string>
    <string name="mapa_nadogradnja">Мапе Београда</string>
    <string name="mnozilac">Множилац</string>
    <string name="nadogradnja_sekcija">Надоградња…</string>
    <string name="naziv_stanice">Назив станице…</string>
    <string name="nedelja">Недеља</string>
    <string name="nema_drugog_smera">Нема другог смера</string>
    <string name="nema_interneta">Нема Интернет везе</string>
    <string name="nema_nadogradnje">Нема нове надоградње</string>
    <string name="nema_polazaka">Нема полазака.</string>
    <string name="nema_trase">Нема уписане трасе за ову линију</string>
    <string name="nema_vozila">Нема возила</string>
    <string name="neprijavljenavozila_opis">Возила без опреме за праћење. Приказују се црном бојом, према реду вожње.</string>
    <string name="neuspelo_trazenje_vozila">Неуспешно израчунавање времена доласка близу ЖС. Приказ од тренутног времена:</string>
    <string name="nije_omoguceno_lociranje">Није дозвољено лоцирање</string>
    <string name="o_programu">О програму</string>
    <string name="odabir_servera">Сервер за положаје возила</string>
    <string name="offline_rezim">Режим ван мреже</string>
    <string name="oko">око</string>
    <string name="opis_programa">Мала, брза апликација за преглед положаја возила градског превоза у Београду. Користи OpenStreetMap податке, док за графичко исцртавање користи VTM.</string>
    <string name="podesavanja_prikaza">Приказ</string>
    <string name="potrebnopreuzeti">Потребно је преузети</string>
    <string name="praznik_nedelja">Недеља (празник)</string>
    <string name="presedanjebgvoz">Преседање на воз</string>
    <string name="pretraga">Претрага линија…</string>
    <string name="preuzmi">Преузимање</string>
    <string name="preuzmi_mapu">Потребно је преузети мапу Београда.</string>
    <string name="prihvatiti_stanicu">Послати упит за ову станицу?</string>
    <string name="prikaz_gb">Гаражни бројеви</string>
    <string name="prikaz_gb_opis">Приказују се заједно са бројем линије.</string>
    <string name="prikaz_po_rv">Непријављена возила</string>
    <string name="prikazpolaska">Време поласка</string>
    <string name="prikazpolaska_objasnjenje">Приказује се пријављено време поласка возила са окретнице.</string>
    <string name="program">Програм</string>
    <string name="program_nadogradnja">Програма</string>
    <string name="pronadjene_stanice">Пронађене станице</string>
    <string name="provera_ver">Провера доступности нове верзије на GitHub-у</string>
    <string name="prva_sekcija_podesavanja">Понашање</string>
    <string name="radni_dan">Радни дан</string>
    <string name="rastojanje">Растојање:</string>
    <string name="red_voznje_od">Ред вожње од:</string>
    <string name="rv">Ред вожње</string>
    <string name="sacuvaj">Сачувај</string>
    <string name="samobgvoz">Само БГ:Воз</string>
    <string name="skinuta_mapa">Преузета мапа</string>
    <string name="skinute_stanice">Преузете станице</string>
    <string name="sl_polasci">Полазак у:</string>
    <string name="sledecaStanicaKod">Следеће стајалиште:</string>
    <string name="stanicaobrisana">Уклоњена</string>
    <string name="stanicasacuvana">Сачувана</string>
    <string name="stanice_nadogradnja">Базе станица, линија и реда вожње</string>
    <string name="subota">Субота</string>
    <string name="trasa">Траса</string>
    <string name="ukljucigps">Укључите лоцирање у подешавањима система.</string>
    <string name="uvecaj_mapu">Увећајте мапу</string>
    <string name="zeleznicka_stanica">ЖС:</string>
    <string name="ponisti">Поништи</string>
</resources>