<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/smerovi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brojlinije">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/brojlinije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="85" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/dani"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smerovi">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/radnidan_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radni_dan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/subota_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subota" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/nedelja_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nedelja" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mrezaPolazaka"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dani" />

    <TextView
        android:id="@+id/rv_od"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/red_voznje_od"
        app:layout_constraintEnd_toEndOf="@+id/rv_od_datum"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rv_od_datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/smerovi"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/nemapol_img"
        android:layout_width="192dp"
        android:layout_height="213dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dani"
        app:srcCompat="@drawable/nema_pol"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/nemapol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/nema_polazaka"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nemapol_img"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>